--- a/paper-data-platforms.qmd
+++ b/paper-data-platforms.qmd
@@ -1,14 +1,15 @@
 ---
 title: "Conceptualizing open health data platforms for low- and middle income countries"
 format:
-  # docx
-  # typst:
-  #   columns: 1
   elsevier-pdf:
     keep-tex: true
     journal:
       name: JIMR
       cite-style: authoryear
+  elsevier-html:
+    toc: true
+    toc-depth: 2
+
 author:
   - name: Daniel Kapitan
     affiliations:
@@ -80,22 +81,22 @@ bibliography: pharmaccess.bib
 
 It is a widely held belief that digital technologies have an important role to play in strengthening health systems in low- and middle income countries (LMICs), as exemplified by the WHO global strategy on digital health [@who2021global]. The adoption rate of mobile phones in LMICs has been an important driver in implementing digital health solutions [@mccool2022mobile]. Yet, there are many shortcomings and challenges, including the current fragmentation of digital platforms and the lack of clear-cut pathways of scaling up digital health programmes, such that they can support sustainable and equitable change of national health systems in LMICs [@mccool2022mobile;@who2019recommendations;@neumark2021digital].
 
-A commonly used perspective to scrutinize digital health is to consider it as a digital platform [@dereuver2018digital]. Digital platforms have disrupted many sectors but have just started to make inroads into highly regulated industries such as healthcare [@ozalp2022digital]. In this light, the challenges faced by LMICs in establishing national digital health platforms have a lot in common with those faced by high income countries. From a technological perspective, interoperability issues, weak integrations, siloed data repositories and overall lack of openness are often reported as key impediments [@malm-nicolais2023exploring;@mehl2023fullstac]. From a societal perspective, issues pertaining to the winner-takes-all nature of digital platforms are hotly debated as many jurisdictions make work to ensure these platforms indeed serve the common good of achieving universal health coverage [@sharon2018when].
+A commonly used perspective to scrutinize digital health is to consider it as a digital platform [@dereuver2018digital]. Digital platforms have disrupted many sectors but have just started to make inroads into highly regulated industries such as healthcare [@ozalp2022digital]. In this light, the challenges faced by LMICs in establishing national digital health platforms have a lot in common with those faced by high income countries. From a technological perspective, interoperability issues, weak integrations, siloed data repositories and overall lack of openness are often reported as key impediments [@malm-nicolais2023exploring;@mehl2023fullstac]. From a societal perspective, issues pertaining to the winner-takes-all nature of digital platforms are hotly debated as many jurisdictions make work to ensure these new digital health platforms indeed serve the common good of achieving universal health coverage [@sharon2018when].
 
 Case studies on digital platforms in healthcare point to an emerging pattern where the focus shifts from the digital platform with its defining software and hardware components, to the data as the primary object of interest in and of itself [@ozalp2022digital;@alaimo2022organizations]. This observation ties into the proposed research agenda by de Reuver et al. to consider data platforms as a phenomenon distinct from digital platforms [@dereuver2022openness]. Generally, data platforms inherit the characteristics of digital platforms. For example, the economic perspective on digital platforms stresses their multi-sidedness with developers and consumers, while data platforms are used by data owners, data consumers and third party solution providers. At the same time, data platforms differ as their main offerings revolve around data. From a market perspective, data platforms have more moderate network effects and are more susceptible to fragmentation and heterogeneity.
 
-Particularly relevant in the context of health data platforms (HDPs), is the conceptualization of openness. The objective of openness, the ways to realize openness and the risks of opening up can be considered as elements within the ongoing debate on data spaces [@otto2022designing] and data solidarity [@kickbusch2021lancet;@prainsack2022data;@prainsack2023beyond] in the healthcare domain, which is a current issue for high income countries and LMICs alike. Openness is particularly relevant if we are to realize a solidarity-based approach to health data sharing that i) gives people a greater control over their data as active decision makers; ii) ensures that the value of data is harnessed for public good; and iii) moves society towards equity and justice by counteracting dynamics of data extraction [@prainsack2022data]. 
+Particularly relevant in the context of health data platforms (HDPs), is the conceptualization of openness. The shift in perspective from digital platforms to data platforms coincides with the paradox of open [@keller2021paradox]. Originally, openness of digital platforms focused on open source, open standards and copyrights, which by has been superseded by “... conflicts about privacy, economic value extraction, the emergence of artificial intelligence, and the destabilizing effects of dominant platforms on (democratic) societies. Instead of access to information, the control of personal data has emerged in the age of platforms as the critical contention.” [@keller2021paradox]. These conflicts are particularly salient in the healthcare domain, as is evidenced by polemic surrounding data spaces [@otto2022designing] and data solidarity [@kickbusch2021lancet;@prainsack2022data;@prainsack2023beyond]. Openness is particularly relevant if we are to realize a solidarity-based approach to health data sharing that i) gives people a greater control over their data as active decision makers; ii) ensures that the value of data is harnessed for public good; and iii) moves society towards equity and justice by counteracting dynamics of data extraction [@prainsack2022data].  
 
 ### From health information exchanges to health data platforms
 
-This paper is motivated by the conflation of a number of developments relevant to the design and implementation of solidarity-based HDPs in LMICs. First, the OpenHIE framework [@openhie] has been adopted by many sub-Saharan African countries [@mamuye2022health] as the architectural blueprint for implementing nation-wide health information exchanges (HIE), including Nigeria [@ohienigeria], Kenya [@khisif] and Tanzania [@tzhea2020]. These countries have, as a matter of course, extended the framework to include “analytics services” as an additional domain. The rationale for this addition is to facilitate primary and secondary re-use of health data for academic research, real-world evidence studies etc. which can be framed within the context of ongoing efforts towards Findable, Accessible, Interoperable and Reusable (FAIR) sharing of health data [@guillot2023fair]. In doing so, however, we have implicitly moved from conceptualizing digital health platforms (the original OpenHIE specification) to health data platforms. This is problematic because the notion of openness, which is assumed to be essential in establishing solidarity-based approaches to data sharing, is inherently different for a data platform compared to a digital platform.
+This paper is motivated by the conflation of a number of developments relevant to the design and implementation of solidarity-based HDPs in LMICs. First, the OpenHIE framework [@openhie] has been adopted by many sub-Saharan African countries [@mamuye2022health] as the architectural blueprint for implementing nation-wide health information exchanges (HIE), including Nigeria [@dalhatu2023paper], Kenya [@thaiya2021adoption] and Tanzania [@nsaghurwe2021one]. These countries have, as a matter of course, extended the framework to include “analytics services” as an additional domain. The rationale for this addition is to facilitate secondary reuse of health data for academic research, real-world evidence studies etc. which can be framed within the context of ongoing efforts towards Findable, Accessible, Interoperable and Reusable (FAIR) sharing of health data [@guillot2023fair]. In doing so, however, we have implicitly moved from conceptualizing digital health platforms (the original OpenHIE specification) to health data platforms. This is problematic because the notion of openness, which is assumed to be essential in establishing solidarity-based approaches to data sharing, is inherently different for a data platform compared to a digital platform.
 
-Conceptually, the OpenHIE framework constitutes a framework for an open digital platform. Openness for digital platforms refers to i) the use of open boundary resources, that is, specifications for the various healthcare specific workflows and information standards such as FHIR; and ii) the use of open source components that are available as digital public goods[@digitalpublicgoods]. If we are to use the OpenHIE framework as an open data platform, we need to extend the standards, technologies and architecture to include functionality for data sharing and re-use. Distinguishing four types of data sharing (@tbl-types-data-sharing), the purpose of this paper is to investigate how new standards and technologies that can establish openness of health data platforms can be integrated into the OpenHIE architecture framework. The lack of detailed specifications and consensus of this addition to OpenHIE currently stands in the way of development projects that aim to establish HDPs in LMICs. In addition, we explicitly address the requirement of downward scalability as we aim to implement health data platforms in resource constrained setting of LMICs. 
+Conceptually, the OpenHIE framework constitutes a framework for an open digital platform. Openness for digital platforms refers to i) the use of open boundary resources, that is, specifications for the various healthcare specific workflows and information standards such as FHIR; and ii) the use of open source components that are available as digital public goods[@digitalpublicgoods]. If we are to use the OpenHIE framework as an open data platform, we need to extend the standards, technologies and architecture to include functionality for data sharing and reuse. Distinguishing four types of data sharing (@tbl-types-data-sharing), the purpose of this paper is to investigate how new standards and technologies that can establish openness of health data platforms can be integrated into the OpenHIE architecture framework. The lack of detailed specifications and consensus of this addition to OpenHIE currently stands in the way of development projects that aim to establish HDPs in LMICs. In addition, we explicitly address the requirement of downward scalability as we aim to implement health data platforms in resource constrained setting of LMICs. 
 
-|   | __Type of data sharing__ | __New standards and technology enablers to create openness__ |
+|   | __Type of data sharing__ | __Technology enablers to create openness of health data platforms__ |
 |:-:|:-------|:-------------|
-| __1__ | Data at the most granular (patient) level, which is persisted and used to provide a longitudinal record. | __Bulk FHIR API__ which has by now been incorporated in all major FHIR implementations the FHIR standard can be readily used to support type 1 data sharing to patient-level data across a patient population [@mandl2020push;@jones2021landscape]. |
-| __2__ | Aggregated data, for example statistics for policy evaluation and benchmarking |__SQL-on-FHIR specification__ [@sql-on-fhir]: provides a standardised approach to make FHIR work well with familiar and efficient SQL engines that are most commonly used in analytical workflows. Builds on FHIRPath [@fhirpath] expressions in a logical structure to specify things like column names and unnested items. Implementations of this approach are available or forthcoming, including open source implementations such as Pathling [@grimes2022pathling] and commercial offerings like Aidbox [@aidbox].|
+| __1__ | Data at the most granular (patient) level, which is persisted and used to provide a longitudinal record. | __Bulk FHIR API__: has by now been incorporated in all major FHIR implementations the FHIR standard can be readily used to support data sharing to patient-level data across a patient population [@mandl2020push;@jones2021landscape]. |
+| __2__ | Aggregated data, for example statistics for policy evaluation and benchmarking |__SQL-on-FHIR specification__ [@sql-on-fhir]: provides a standardised approach to make FHIR work well with familiar and efficient SQL engines that are most commonly used in analytical workflows. Builds on FHIRPath [@hl72020fhirpath] expressions in a logical structure to specify things like column names and unnested items. Implementations of this approach are available or forthcoming, including open source implementations such as Pathling [@grimes2022pathling] and commercial offerings like Aidbox [@aidbox].|
 | __3__ | Data analytics modules, that provide access to work and access the data. | __Federated learning (FL)__ [@rieke2020future] and __privacy- enhancing technologies (PETs)__ [@scheibner2021revolutionizing;@jordan2022selecting]: new paradigms that address the problem of data governance and privacy by training algorithms collaboratively without exchanging the data itself. Models can be trained on combined datasets and made available as open source artifacts for decision support. Data analysts can use FL and PETs to work with the data in a collaborative, decentralized fashion. |
 | __4__ | Trained models that have been derived from the data and can be used stand-alone for decision support. | __ONNX__ [@onnx]: an open format built to represent machine learning models. |
 
@@ -103,16 +104,16 @@ Conceptually, the OpenHIE framework constitutes a framework for an open digital 
 
 ## Methods
 
-In the paper, we present a design that extends the OpenHIE specification to include the four types of data sharing mentioned above. Using the full-STAC approach [@mehl2023fullstac] we combine open standards, open technologies and open architectures into a coherent modular HDP platform that can be configured and re-used across a variety of use-cases. Subsequently, we employ a formative, naturalistic evaluation to assess the technical risk and efficacy of the design [@venable2016feds]. Given that it is prohibitively expensive to evaluate with real users and real systems in the real setting, we aim to minimize technological risks and maximize the efficacy of the design by considering three real-world examples of health data platoform in LMICs, namely i) the OpenHIM platform ([https://jembi.gitbook.io/openhim-platform/](https://jembi.gitbook.io/openhim-platform/)); ii) the ONA Canopy platform [https://ona.io/home/services/canopy/](https://ona.io/home/services/canopy/); and iii) the MomCare platform ([https://health-data-commons.pharmaccess.org](https://health-data-commons.pharmaccess.org). As part of our design research, we have taken a narrative approach in surveying existing scientific studies on health data platforms, focusing on the seminal reports and subsequently searching forward citations. In addition, we have searched the open source repositories (most notably GitHub) and the online communities (OpenHIE community, FHIR community) to search for relevant open standards, technologies and architectures. This paper should not be considered as a proper systematic review.
+In the paper, we present a design that extends the OpenHIE specification to include the four types of data sharing mentioned above. Using the full-STAC approach [@mehl2023fullstac] we combine open standards, open technologies and open architectures into a coherent modular HDP platform that can be configured and reused across a variety of use-cases. Subsequently, we employ a formative, naturalistic evaluation to assess the technical risk and efficacy of the design [@venable2016feds]. Given that it is prohibitively expensive to evaluate with real users and real systems in the real setting, we aim to minimize technological risks and maximize the efficacy of the design by considering three real-world examples of health data platoform in LMICs, namely i) the OpenHIM platform ([https://jembi.gitbook.io/openhim-platform/](https://jembi.gitbook.io/openhim-platform/)); ii) the ONA Canopy platform [https://ona.io/home/services/canopy/](https://ona.io/home/services/canopy/); and iii) the work conducted at PharmAccess Foundation as part of the MomCare programme ([https://health-data-commons.pharmaccess.org](https://health-data-commons.pharmaccess.org)). As part of our design research, we have taken a narrative approach in surveying existing scientific studies on health data platforms, focusing on the seminal reports and subsequently searching forward citations. In addition, we have searched the open source repositories (most notably GitHub) and the online communities (OpenHIE community, FHIR community) to search for relevant open standards, technologies and architectures. This paper should not be considered as a proper systematic review.
 
 
 ## Design
 
 ### Open standards: using FHIR as the common data model
 
-The recent convergence to FHIR as the de facto standard for information exchange has fuelled the development of OpenHIE. FHIR is currently used both for routine healthcare settings[ @ayaz2021fast] and clinical research settings [@duda2022hl7;@vorisek2022fast] and is increasingly being used in LMICs as well. The guidelines and standards of the African Union explicitly state FHIR is to be used as the messaging standard [@2023african]. The FHIR-native OpenSRP platform [@mehl2020open] has been deployed in 14 countries targeting various patient populations, amongst which a reference implementation of the WHO antenatal and neonatal care guidelines for midwives in Lombok, Indonesia [@summitinstitutefordevelopment2023bunda;@kurniawan2019midwife]. In India, FHIR is used as the underlying technology for the open Health Claims Exchange protocol specification, which has been adopted by the Indian government as the standard for e-claims handling [@hcx]. This range of utilizations showcase the standards’ widespread applicability. The proceedings of the OpenHIE conference 2023 attest to the fact that FHIR and open source technologies are embraced as critical enablers in implementing health information exchanges in LMICs [@ohie23].
+The recent convergence to FHIR as the de facto standard for information exchange has fuelled the development of OpenHIE. FHIR is currently used both for routine healthcare settings [@ayaz2021fast] and clinical research settings [@duda2022hl7;@vorisek2022fast] and is increasingly being used in LMICs as well. The guidelines and standards of the African Union explicitly state FHIR is to be used as the messaging standard [@2023african]. The FHIR-native OpenSRP platform [@mehl2020open] has been deployed in 14 countries targeting various patient populations, amongst which a reference implementation of the WHO antenatal and neonatal care guidelines for midwives in Lombok, Indonesia [@summitinstitutefordevelopment2023bunda;@kurniawan2019midwife]. In India, FHIR is used as the underlying technology for the open Health Claims Exchange protocol specification, which has been adopted by the Indian government as the standard for e-claims handling [@hcx]. This range of utilizations showcase the standards’ widespread applicability. The proceedings of the OpenHIE conference 2023 attest to the fact that FHIR and open source technologies are embraced as critical enablers in implementing health information exchanges in LMICs [@ohie2023unconference].
 
-However, despite the increased use of FHIR as a common data model, various studies have investigated its merits and performance vis-a-vis other healthcare standards. Comparisons between OpenEHR, ISO 13606, OMOP and FHIR have been made [@ayaz2023transforming;@mullie2023coda;@rinaldi2021openehr;@cremonesi2023need;@sinaci2023data]. A study involving 10 experts comparing OpenEHR, ISO 13606 and FHIR concluded that i) these three standards are functionally and technically compatible, and therefore can be used side by side; and that ii) each of these standards have their strengths and limitations that correlate with their intended use as summarized in the @tbl-comparison.
+Various studies have investigated the merits of FHIR and its performance vis-a-vis other healthcare standards. Comparisons between OpenEHR, ISO 13606, OMOP and FHIR have been made [@ayaz2023transforming;@mullie2023coda;@rinaldi2021openehr;@cremonesi2023need;@sinaci2023data]. A study involving 10 experts comparing OpenEHR, ISO 13606 and FHIR concluded that i) these three standards are functionally and technically compatible, and therefore can be used side by side; and that ii) each of these standards have their strengths and limitations that correlate with their intended use as summarized in the @tbl-comparison.
 
 ![Comparison of OpenEHR, ISO 13606 and FHIR standards](images/comparison-ehr-standards.png){width=auto #tbl-comparison}
 
@@ -128,35 +129,84 @@ Although FHIR was originally designed only for exchange between systems, we prop
 
 Possible risks pertaining to the use of FHIR as the common data model, most notably the possible incompatibilities and/or high costs of maintenance in supporting different versions, will be addressed in the Discussion.
 
-### Open architecture: extending OpenHIE framework with a lakehouse data platform
+### Open architecture: extending OpenHIE with a composable data stack
 
-Data management and analytics platforms have undergone significant changes since the first generation of data warehouses were introduced. Recent studies have shown that the current practice has converged towards the lakehouse as one of the most commonly used solution designs [@armbrust2021lakehouse;@hai2023data;@harby2022data]. Lakehouses typically have a zonal architecture [@hai2023data] where data is ingested from the source systems in bulk (E), delivered to storage with aligned schemas (L) and transformed into a format ready for analysis (T). The discerning characteristic of the lakehouse architecture is its foundation on low-cost and directly-accessible storage that also provides traditional analytical DBMS management and performance features such as ACID transactions, data versioning, auditing, indexing, caching, and query optimization [@armbrust2021lakehouse]. Lakehouses thus combine the key benefits of data lakes and data warehouses: low-cost storage in an open format accessible by a variety of systems from the former, and powerful management and optimization features from the latter.
+#### Evolving the data lakehouse to a composable data stack
+
+Data management and analytics platforms have undergone significant changes since the first generation of data warehouses were introduced. Recent studies have shown that the current practice has converged towards the lakehouse as one of the most commonly used solution designs [@armbrust2021lakehouse;@hai2023data;@harby2022data]. Lakehouses typically have a zonal architecture that follow the Extract-Load-Transform pattern (ELT) [@hai2023data] where data is ingested from the source systems in bulk (E), delivered to storage with aligned schemas (L) and transformed into a format ready for analysis (T). The discerning characteristic of the lakehouse architecture is its foundation on low-cost and directly-accessible storage that also provides traditional analytical DBMS management and performance features such as ACID transactions, data versioning, auditing, indexing, caching, and query optimization [@armbrust2021lakehouse]. Lakehouses thus combine the key benefits of data lakes and data warehouses: low-cost storage in an open format accessible by a variety of systems from the former, and powerful management and optimization features from the latter.
 
 With respect to current implementations of lakehouse data platforms, we observe a proliferation of tools with as yet limited standards to improve technical interoperability. In the analysis of Pedreira et al. [@pedreira2023composable] the requirement for specialization in data management systems has evolved faster than our software development practices. This situation has created a siloed landscape composed of hundreds of products developed and maintained as monoliths, with limited reuse between systems. It has also affected the end users, who are often required to learn the idiosyncrasies of dozens of incompatible SQL and non-SQL API dialects, and settle for systems with incomplete functionality and inconsistent semantics. To remedy this, Pedreira et al. call to (re-)design and implement modern data platforms in terms of a 'composable data stack’ as a means to decrease development and maintenance cost and pick-up the speed of innovation.
 
-While the lakehouse architecture separates the concerns of compute and storage, the composable data stack takes the separation of concerns is taken one step further. A composable data system (@fig-composable-data-stack), not only separates the storage (layer 3) and execution (layer 2), but also separates the user interface (layer 1) from the execution engine by introducing standards for Intermediate Representation (standard A) and Connectivity (standard B). The composable data stack can be implemented with current open source technologies (@fig-cds-examples). As an example, the Ibis user interface is currently sufficiently mature to offer a standardized dataframe interface to 19 different execution engines.
+While the lakehouse architecture separates the concerns of compute and storage, the composable data stack takes the separation of concerns is taken one step further. A composable data system (@fig-composable-data-stack), not only separates the storage (layer 3) and execution (layer 2), but also separates the user interface (layer 1) from the execution engine by introducing standards including Substrait for Intermediate Representation (standard A) and Apache Arrow (standard B and C). The composable data stack can be implemented with current open source technologies (@fig-cds-examples). As an example, the Ibis user interface is currently sufficiently mature to offer a standardized dataframe interface to 19 different execution engines.
 
 ![Composable data stack](images/composable-data-stack.png){#fig-composable-data-stack}
 
-![Examples of implementations of the composable data stack](images/composable-data-stack-implementation.png){#fig-cds-examples}
+![Examples of implementations of the composable data stack](images/composable-data-stack-implementation-2.png){#fig-cds-examples}
 
-The premise of separating the user interface from the execution engine is directly related to the key objective of the SQL-on-FHIR project ([https://build.fhir.org/ig/FHIR/sql-on-fhir-v2/](https://build.fhir.org/ig/FHIR/sql-on-fhir-v2/)), namely to make large-scale analysis of FHIR data accessible to a larger audience, portable between systems and to make FHIR data work well with the best available analytic tools, regardless of the technology stack. However, as FHIR is represented as a graph of resources, with detailed semantics defined for references between resources, data types, terminology, extensions, and many other aspects of the specification; to use FHIR effectively analysts require a thorough understanding of the specification. Most analytic and machine learning use cases require the preparation of FHIR data using transformations and tabular projections from its original form. The task of authoring these transformations and projections is not trivial and there is currently no standard mechanisms to support reuse.
+#### SQL-on-FHIR v2 as an intermediate representation for FHIR data in tabular format
+
+The premise of separating the user interface from the execution engine is directly related to the key objective of the SQL-on-FHIR project ([https://build.fhir.org/ig/FHIR/sql-on-fhir-v2/](https://build.fhir.org/ig/FHIR/sql-on-fhir-v2/)), namely to make large-scale analysis of FHIR data accessible to a larger audience, portable between systems and to make FHIR data work well with the best available analytic tools, regardless of the technology stack. However, as FHIR is represented as a graph of resources, with detailed semantics defined for references between resources, data types, terminology, extensions, and many other aspects of the specification. To use FHIR effectively analysts require a thorough understanding of the specification. Most analytic and machine learning use cases require the preparation of FHIR data using transformations and tabular projections from its original form. The task of authoring these transformations and projections is not trivial and there is currently no standard mechanisms to support reuse.
 
 The solution of the SQL-on-FHIR project is to provide a specification for defining tabular, use case-specific views of FHIR data. The view definition and the execution of the view are separated, in such a way that the definition is portable across systems while the execution engine (called runners) are system-specific tools or libraries that apply view definitions to the underlying data layer, optionally making use of annotations to optimize performance.
 
+#### Extending OpenHIE with a FHIR-based composable data stack
+
+We propose to extend the OpenHIE architecture with a "Data and Analytics Services" domain with 5 services by synthesizing the architecture of Hai et al. [@hai2023data] and the composable data stack [@pedreira2023composable] (@fig-ohie, @tbl-data-and-analysis-services).
+
+![Proposed extension of the OpenHIE architecture that includes "Data and Analytics Services" as an additional service domain.](./images/hie.png){#fig-ohie}
+
++-------------------+---------------------------------------------------------------------------------------+
+| Service           | Functional requirements                                                               |
++===================+=======================================================================================+
+| Ingestion         | - Metadata extraction                                                                 |
+|                   | - Metadata modeling                                                                   |
++-------------------+---------------------------------------------------------------------------------------+
+| Storage           | - File-based blob storage                                                             |
++-------------------+---------------------------------------------------------------------------------------+
+| Query &           | - SQL-on-FHIR Runner                                                                  |
+| Processing        | - Execution engine on tabular data as defined in composable data stack                |  
++-------------------+---------------------------------------------------------------------------------------+
+| Maintenance       | - SQL-on-FHIR View defintions                                                         |
+|                   | - Maintenance-related functions as defined by Hai et al.                              |
++-------------------+---------------------------------------------------------------------------------------+
+| Exploration       | - Interactive computing environment [@granger2021jupyter]                             |
+|                   | - Capability to participate as a node in a federative learning network, including MPC |
++-------------------+---------------------------------------------------------------------------------------+
+
+: Definition of Data and Analysis Services {#tbl-data-and-analysis-services}
+
+##### Ingestion
+
+Default workflow is extraction of data from SHR using Bulk FHIR API. Data contains metadata (incl. FHIR versions) and fully qualified semantics, for example, coding systems. Despite this, metadata extraction and metadata modeling is still required to meet the FAIR requirements. Issues that need to be solved by these services:
+
+- To prepare for future updates of FHIR versions
+- Implement late-binding principle of having increasingly more specific FHIR profiles as bulk FHIR data propagates through lakehouse
 
 
-Our proposal for extending HIE is as follows.
+##### Storage
 
-- add diagram, explicitly adding the component
+- from ndjson to parquet
+- possibly used delta lake for time versioning
+- separation of storage from compute not only for benefits of lower TCO, but also be ready for federated learning and MPC in future
+
+
+##### Query & Processing
+
 - fit in structure of OpenHIE specification
 - check which workflows are related to analytics
+- Hai calls this 'Maintenance'
 
-Following Hai we take a subset of the core functionalities of a data lake. Because the SHR is the key source, don’t need full stack of ingestion of various sources.
+##### Maintenance
 
-![](./images/hie.png)
+- SQL-on-FHIR Views provide new standard to support mADX aggregate reporting
+- Maintenance-related functions remain the same
+- NB: orchestration falls under data provenance
 
-- Query-driven data discovery
+##### Exploration
+
+
+
+
 
 ### Open technologies: available digital public goods
 
@@ -214,13 +264,15 @@ Requirements are similar, but implementation differs: Datamodel is non-FHIR, foc
 - FAIR principles vs FHIR graph: is FHIR a FAIR Data Object
 
 
-
-
-
 ### Attribute-based access control
 
 - TO DO: if you have generated flattened SQL tables, how are you going to manage security?
 - Cerbos, attribute based on lineage or anonymized tables
+
+### Federated learning and multiparty computation
+
+- data stations??!
+
 
 ## Abbreviations
 
