--- a/paper-data-platforms.tex
+++ b/paper-data-platforms.tex
@@ -258,8 +258,8 @@ openness are often reported as key impediments
 \citep{malm-nicolais2023exploring, mehl2023fullstac}. From a societal
 perspective, issues pertaining to the winner-takes-all nature of digital
 platforms are hotly debated as many jurisdictions make work to ensure
-these platforms indeed serve the common good of achieving universal
-health coverage \citep{sharon2018when}.
+these new digital health platforms indeed serve the common good of
+achieving universal health coverage \citep{sharon2018when}.
 
 Case studies on digital platforms in healthcare point to an emerging
 pattern where the focus shifts from the digital platform with its
@@ -278,18 +278,25 @@ a market perspective, data platforms have more moderate network effects
 and are more susceptible to fragmentation and heterogeneity.
 
 Particularly relevant in the context of health data platforms (HDPs), is
-the conceptualization of openness. The objective of openness, the ways
-to realize openness and the risks of opening up can be considered as
-elements within the ongoing debate on data spaces
-\citep{otto2022designing} and data solidarity
-\citep{kickbusch2021lancet, prainsack2022data, prainsack2023beyond} in
-the healthcare domain, which is a current issue for high income
-countries and LMICs alike. Openness is particularly relevant if we are
-to realize a solidarity-based approach to health data sharing that i)
-gives people a greater control over their data as active decision
-makers; ii) ensures that the value of data is harnessed for public good;
-and iii) moves society towards equity and justice by counteracting
-dynamics of data extraction \citep{prainsack2022data}.
+the conceptualization of openness. The shift in perspective from digital
+platforms to data platforms coincides with the paradox of open
+\citep{keller2021paradox}. Originally, openness of digital platforms
+focused on open source, open standards and copyrights, which by has been
+superseded by ``\ldots{} conflicts about privacy, economic value
+extraction, the emergence of artificial intelligence, and the
+destabilizing effects of dominant platforms on (democratic) societies.
+Instead of access to information, the control of personal data has
+emerged in the age of platforms as the critical contention.''
+\citep{keller2021paradox}. These conflicts are particularly salient in
+the healthcare domain, as is evidenced by polemic surrounding data
+spaces \citep{otto2022designing} and data solidarity
+\citep{kickbusch2021lancet, prainsack2022data, prainsack2023beyond}.
+Openness is particularly relevant if we are to realize a
+solidarity-based approach to health data sharing that i) gives people a
+greater control over their data as active decision makers; ii) ensures
+that the value of data is harnessed for public good; and iii) moves
+society towards equity and justice by counteracting dynamics of data
+extraction \citep{prainsack2022data}.
 
 \subsection{From health information exchanges to health data
 platforms}\label{from-health-information-exchanges-to-health-data-platforms}
@@ -299,11 +306,11 @@ relevant to the design and implementation of solidarity-based HDPs in
 LMICs. First, the OpenHIE framework \citep{openhie} has been adopted by
 many sub-Saharan African countries \citep{mamuye2022health} as the
 architectural blueprint for implementing nation-wide health information
-exchanges (HIE), including Nigeria \citep{ohienigeria}, Kenya
-\citep{khisif} and Tanzania \citep{tzhea2020}. These countries have, as
-a matter of course, extended the framework to include ``analytics
-services'' as an additional domain. The rationale for this addition is
-to facilitate primary and secondary re-use of health data for academic
+exchanges (HIE), including Nigeria \citep{dalhatu2023paper}, Kenya
+\citep{thaiya2021adoption} and Tanzania \citep{nsaghurwe2021one}. These
+countries have, as a matter of course, extended the framework to include
+``analytics services'' as an additional domain. The rationale for this
+addition is to facilitate secondary reuse of health data for academic
 research, real-world evidence studies etc. which can be framed within
 the context of ongoing efforts towards Findable, Accessible,
 Interoperable and Reusable (FAIR) sharing of health data
@@ -322,7 +329,7 @@ and ii) the use of open source components that are available as digital
 public goods\citep{digitalpublicgoods}. If we are to use the OpenHIE
 framework as an open data platform, we need to extend the standards,
 technologies and architecture to include functionality for data sharing
-and re-use. Distinguishing four types of data sharing
+and reuse. Distinguishing four types of data sharing
 (Table~\ref{tbl-types-data-sharing}), the purpose of this paper is to
 investigate how new standards and technologies that can establish
 openness of health data platforms can be integrated into the OpenHIE
@@ -345,7 +352,7 @@ openness.}\label{tbl-types-data-sharing}\tabularnewline
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
 \textbf{Type of data sharing}
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-\textbf{New standards and technology enablers to create openness}
+\textbf{Technology enablers to create openness of health data platforms}
 \end{minipage} \\
 \midrule\noalign{}
 \endfirsthead
@@ -354,7 +361,7 @@ openness.}\label{tbl-types-data-sharing}\tabularnewline
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
 \textbf{Type of data sharing}
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-\textbf{New standards and technology enablers to create openness}
+\textbf{Technology enablers to create openness of health data platforms}
 \end{minipage} \\
 \midrule\noalign{}
 \endhead
@@ -362,18 +369,18 @@ openness.}\label{tbl-types-data-sharing}\tabularnewline
 \endlastfoot
 \textbf{1} & Data at the most granular (patient) level, which is
 persisted and used to provide a longitudinal record. & \textbf{Bulk FHIR
-API} which has by now been incorporated in all major FHIR
-implementations the FHIR standard can be readily used to support type 1
-data sharing to patient-level data across a patient population
+API}: has by now been incorporated in all major FHIR implementations the
+FHIR standard can be readily used to support data sharing to
+patient-level data across a patient population
 \citep{mandl2020push, jones2021landscape}. \\
 \textbf{2} & Aggregated data, for example statistics for policy
 evaluation and benchmarking & \textbf{SQL-on-FHIR specification}
 \citep{sql-on-fhir}: provides a standardised approach to make FHIR work
 well with familiar and efficient SQL engines that are most commonly used
-in analytical workflows. Builds on FHIRPath \citep{fhirpath} expressions
-in a logical structure to specify things like column names and unnested
-items. Implementations of this approach are available or forthcoming,
-including open source implementations such as Pathling
+in analytical workflows. Builds on FHIRPath \citep{hl72020fhirpath}
+expressions in a logical structure to specify things like column names
+and unnested items. Implementations of this approach are available or
+forthcoming, including open source implementations such as Pathling
 \citep{grimes2022pathling} and commercial offerings like Aidbox
 \citep{aidbox}. \\
 \textbf{3} & Data analytics modules, that provide access to work and
@@ -396,7 +403,7 @@ In the paper, we present a design that extends the OpenHIE specification
 to include the four types of data sharing mentioned above. Using the
 full-STAC approach \citep{mehl2023fullstac} we combine open standards,
 open technologies and open architectures into a coherent modular HDP
-platform that can be configured and re-used across a variety of
+platform that can be configured and reused across a variety of
 use-cases. Subsequently, we employ a formative, naturalistic evaluation
 to assess the technical risk and efficacy of the design
 \citep{venable2016feds}. Given that it is prohibitively expensive to
@@ -405,11 +412,12 @@ minimize technological risks and maximize the efficacy of the design by
 considering three real-world examples of health data platoform in LMICs,
 namely i) the OpenHIM platform
 (\url{https://jembi.gitbook.io/openhim-platform/}); ii) the ONA Canopy
-platform \url{https://ona.io/home/services/canopy/}; and iii) the
-MomCare platform (\url{https://health-data-commons.pharmaccess.org}. As
-part of our design research, we have taken a narrative approach in
-surveying existing scientific studies on health data platforms, focusing
-on the seminal reports and subsequently searching forward citations. In
+platform \url{https://ona.io/home/services/canopy/}; and iii) the work
+conducted at PharmAccess Foundation as part of the MomCare programme
+(\url{https://health-data-commons.pharmaccess.org}). As part of our
+design research, we have taken a narrative approach in surveying
+existing scientific studies on health data platforms, focusing on the
+seminal reports and subsequently searching forward citations. In
 addition, we have searched the open source repositories (most notably
 GitHub) and the online communities (OpenHIE community, FHIR community)
 to search for relevant open standards, technologies and architectures.
@@ -422,7 +430,7 @@ model}\label{open-standards-using-fhir-as-the-common-data-model}
 
 The recent convergence to FHIR as the de facto standard for information
 exchange has fuelled the development of OpenHIE. FHIR is currently used
-both for routine healthcare settings\citep{ayaz2021fast} and clinical
+both for routine healthcare settings \citep{ayaz2021fast} and clinical
 research settings \citep{duda2022hl7, vorisek2022fast} and is
 increasingly being used in LMICs as well. The guidelines and standards
 of the African Union explicitly state FHIR is to be used as the
@@ -438,12 +446,11 @@ This range of utilizations showcase the standards' widespread
 applicability. The proceedings of the OpenHIE conference 2023 attest to
 the fact that FHIR and open source technologies are embraced as critical
 enablers in implementing health information exchanges in LMICs
-\citep{ohie23}.
+\citep{ohie2023unconference}.
 
-However, despite the increased use of FHIR as a common data model,
-various studies have investigated its merits and performance vis-a-vis
-other healthcare standards. Comparisons between OpenEHR, ISO 13606, OMOP
-and FHIR have been made
+Various studies have investigated the merits of FHIR and its performance
+vis-a-vis other healthcare standards. Comparisons between OpenEHR, ISO
+13606, OMOP and FHIR have been made
 \citep{ayaz2023transforming, mullie2023coda, rinaldi2021openehr, cremonesi2023need, sinaci2023data}.
 A study involving 10 experts comparing OpenEHR, ISO 13606 and FHIR
 concluded that i) these three standards are functionally and technically
@@ -513,16 +520,19 @@ most notably the possible incompatibilities and/or high costs of
 maintenance in supporting different versions, will be addressed in the
 Discussion.
 
-\subsection{Open architecture: extending OpenHIE framework with a
-lakehouse data
-platform}\label{open-architecture-extending-openhie-framework-with-a-lakehouse-data-platform}
+\subsection{Open architecture: extending OpenHIE with a composable data
+stack}\label{open-architecture-extending-openhie-with-a-composable-data-stack}
+
+\subsubsection{Evolving the data lakehouse to a composable data
+stack}\label{evolving-the-data-lakehouse-to-a-composable-data-stack}
 
 Data management and analytics platforms have undergone significant
 changes since the first generation of data warehouses were introduced.
 Recent studies have shown that the current practice has converged
 towards the lakehouse as one of the most commonly used solution designs
 \citep{armbrust2021lakehouse, hai2023data, harby2022data}. Lakehouses
-typically have a zonal architecture \citep{hai2023data} where data is
+typically have a zonal architecture that follow the
+Extract-Load-Transform pattern (ELT) \citep{hai2023data} where data is
 ingested from the source systems in bulk (E), delivered to storage with
 aligned schemas (L) and transformed into a format ready for analysis
 (T). The discerning characteristic of the lakehouse architecture is its
@@ -555,12 +565,13 @@ storage, the composable data stack takes the separation of concerns is
 taken one step further. A composable data system
 (Figure~\ref{fig-composable-data-stack}), not only separates the storage
 (layer 3) and execution (layer 2), but also separates the user interface
-(layer 1) from the execution engine by introducing standards for
-Intermediate Representation (standard A) and Connectivity (standard B).
-The composable data stack can be implemented with current open source
-technologies (Figure~\ref{fig-cds-examples}). As an example, the Ibis
-user interface is currently sufficiently mature to offer a standardized
-dataframe interface to 19 different execution engines.
+(layer 1) from the execution engine by introducing standards including
+Substrait for Intermediate Representation (standard A) and Apache Arrow
+(standard B and C). The composable data stack can be implemented with
+current open source technologies (Figure~\ref{fig-cds-examples}). As an
+example, the Ibis user interface is currently sufficiently mature to
+offer a standardized dataframe interface to 19 different execution
+engines.
 
 \begin{figure}
 
@@ -578,7 +589,7 @@ dataframe interface to 19 different execution engines.
 
 \centering{
 
-\includegraphics{images/composable-data-stack-implementation.png}
+\includegraphics{images/composable-data-stack-implementation-2.png}
 
 }
 
@@ -586,6 +597,10 @@ dataframe interface to 19 different execution engines.
 composable data stack}
 
 \end{figure}%
+
+\subsubsection{SQL-on-FHIR v2 as an intermediate representation for FHIR
+data in tabular
+format}\label{sql-on-fhir-v2-as-an-intermediate-representation-for-fhir-data-in-tabular-format}
 
 The premise of separating the user interface from the execution engine
 is directly related to the key objective of the SQL-on-FHIR project
@@ -595,7 +610,7 @@ portable between systems and to make FHIR data work well with the best
 available analytic tools, regardless of the technology stack. However,
 as FHIR is represented as a graph of resources, with detailed semantics
 defined for references between resources, data types, terminology,
-extensions, and many other aspects of the specification; to use FHIR
+extensions, and many other aspects of the specification. To use FHIR
 effectively analysts require a thorough understanding of the
 specification. Most analytic and machine learning use cases require the
 preparation of FHIR data using transformations and tabular projections
@@ -611,29 +626,154 @@ engine (called runners) are system-specific tools or libraries that
 apply view definitions to the underlying data layer, optionally making
 use of annotations to optimize performance.
 
-Our proposal for extending HIE is as follows.
+\subsubsection{Extending OpenHIE with a FHIR-based composable data
+stack}\label{extending-openhie-with-a-fhir-based-composable-data-stack}
+
+We propose to extend the OpenHIE architecture with a ``Data and
+Analytics Services'' domain with 5 services by synthesizing the
+architecture of Hai et al. \citep{hai2023data} and the composable data
+stack \citep{pedreira2023composable} (Figure~\ref{fig-ohie},
+Table~\ref{tbl-data-and-analysis-services}).
+
+\begin{figure}
+
+\centering{
+
+\includegraphics{./images/hie.png}
+
+}
+
+\caption{\label{fig-ohie}Proposed extension of the OpenHIE architecture
+that includes ``Data and Analytics Services'' as an additional service
+domain.}
+
+\end{figure}%
+
+\begin{longtable}[]{@{}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 2\tabcolsep) * \real{0.1852}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 2\tabcolsep) * \real{0.8148}}@{}}
+\caption{Definition of Data and Analysis
+Services}\label{tbl-data-and-analysis-services}\tabularnewline
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+Service
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Functional requirements
+\end{minipage} \\
+\midrule\noalign{}
+\endfirsthead
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+Service
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Functional requirements
+\end{minipage} \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+Ingestion & \begin{minipage}[t]{\linewidth}\raggedright
+\begin{itemize}
+\tightlist
+\item
+  Metadata extraction
+\item
+  Metadata modeling
+\end{itemize}
+\end{minipage} \\
+Storage & \begin{minipage}[t]{\linewidth}\raggedright
+\begin{itemize}
+\tightlist
+\item
+  File-based blob storage
+\end{itemize}
+\end{minipage} \\
+Query \& Processing & \begin{minipage}[t]{\linewidth}\raggedright
+\begin{itemize}
+\tightlist
+\item
+  SQL-on-FHIR Runner
+\item
+  Execution engine on tabular data as defined in composable data stack
+\end{itemize}
+\end{minipage} \\
+Maintenance & \begin{minipage}[t]{\linewidth}\raggedright
+\begin{itemize}
+\tightlist
+\item
+  SQL-on-FHIR View defintions
+\item
+  Maintenance-related functions as defined by Hai et al.
+\end{itemize}
+\end{minipage} \\
+Exploration & \begin{minipage}[t]{\linewidth}\raggedright
+\begin{itemize}
+\tightlist
+\item
+  Interactive computing environment \citep{granger2021jupyter}
+\item
+  Capability to participate as a node in a federative learning network,
+  including MPC
+\end{itemize}
+\end{minipage} \\
+\end{longtable}
+
+\paragraph{Ingestion}\label{ingestion}
+
+Default workflow is extraction of data from SHR using Bulk FHIR API.
+Data contains metadata (incl.~FHIR versions) and fully qualified
+semantics, for example, coding systems. Despite this, metadata
+extraction and metadata modeling is still required to meet the FAIR
+requirements. Issues that need to be solved by these services:
 
 \begin{itemize}
 \tightlist
 \item
-  add diagram, explicitly adding the component
+  To prepare for future updates of FHIR versions
+\item
+  Implement late-binding principle of having increasingly more specific
+  FHIR profiles as bulk FHIR data propagates through lakehouse
+\end{itemize}
+
+\paragraph{Storage}\label{storage}
+
+\begin{itemize}
+\tightlist
+\item
+  from ndjson to parquet
+\item
+  possibly used delta lake for time versioning
+\item
+  separation of storage from compute not only for benefits of lower TCO,
+  but also be ready for federated learning and MPC in future
+\end{itemize}
+
+\paragraph{Query \& Processing}\label{query-processing}
+
+\begin{itemize}
+\tightlist
 \item
   fit in structure of OpenHIE specification
 \item
   check which workflows are related to analytics
+\item
+  Hai calls this `Maintenance'
 \end{itemize}
 
-Following Hai we take a subset of the core functionalities of a data
-lake. Because the SHR is the key source, don't need full stack of
-ingestion of various sources.
-
-\includegraphics{./images/hie.png}
+\paragraph{Maintenance}\label{maintenance}
 
 \begin{itemize}
 \tightlist
 \item
-  Query-driven data discovery
+  SQL-on-FHIR Views provide new standard to support mADX aggregate
+  reporting
+\item
+  Maintenance-related functions remain the same
+\item
+  NB: orchestration falls under data provenance
 \end{itemize}
+
+\paragraph{Exploration}\label{exploration}
 
 \subsection{Open technologies: available digital public
 goods}\label{open-technologies-available-digital-public-goods}
@@ -799,6 +939,15 @@ control}\label{attribute-based-access-control}
   to manage security?
 \item
   Cerbos, attribute based on lineage or anonymized tables
+\end{itemize}
+
+\subsection{Federated learning and multiparty
+computation}\label{federated-learning-and-multiparty-computation}
+
+\begin{itemize}
+\tightlist
+\item
+  data stations??!
 \end{itemize}
 
 \section{Abbreviations}\label{abbreviations}
